# app/Http/Resources/Award.php
@@ -23,10 +23,18 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *         example = 100000,
  *     ),
  *     @OA\Property(
- *         property = "number",
+ *         property = "limit",
  *         type = "integer",
  *         description = "獎品剩餘數量",
  *         example = 10,
+ *     ),
+ *     @OA\Property(
+ *         property = "memberList",
+ *         type = "array",
+ *         description = "得獎人們",
+ *         @OA\Items(
+ *             ref = "#/components/schemas/Candidate.Candidate",
+ *         ),
  *     ),
  * )
  */
@@ -41,9 +49,10 @@ class Award extends JsonResource
     public function toArray($request)
     {
         return [
-            'name' => $this->name,
-            'money' => (int) $this->amount_of_money,
-            'number' => (int) $this->number,
+            'awardName' => $this->name,
+            'money' => $this->money,
+            'limit' => (int) $this->number,
+            'memberList' => Candidate::collection($this->candidates),
         ];
     }
 }
